# kyugraph

./: .env.markflow  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
bindings/nodejs/: Cargo.toml  package-lock.json  package.json
bindings/nodejs/src/: lib.rs
bindings/nodejs/tests/: test_kyugraph.mjs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_kyugraph.py
crates/kyu-api/: Cargo.toml  README.md
crates/kyu-api/benches/: e2e_bench.rs
crates/kyu-api/examples/: agent_explorer.rs  filesystem_graph.rs  knowledge_graph.rs  rdf_knowledge_graph.rs
crates/kyu-api/src/: connection.rs  database.rs  flight.rs  lib.rs  persistence.rs  storage.rs
crates/kyu-binder/: Cargo.toml
crates/kyu-binder/src/: binder.rs  bound_statement.rs  expression_binder.rs  lib.rs  scope.rs
crates/kyu-catalog/: Cargo.toml
crates/kyu-catalog/src/: catalog.rs  ddl.rs  entry.rs  lib.rs  type_resolver.rs
crates/kyu-catalog/tests/: catalog_roundtrip.rs
crates/kyu-cli/: Cargo.toml
crates/kyu-cli/src/: main.rs
crates/kyu-common/: Cargo.toml
crates/kyu-common/src/: config.rs  error.rs  id.rs  lib.rs
crates/kyu-coord/: Cargo.toml  README.md
crates/kyu-coord/src/: lib.rs  task.rs  tenant.rs  worker.rs
crates/kyu-copy/: Cargo.toml
crates/kyu-copy/src/: arrow_reader.rs  csv_reader.rs  kafka_reader.rs  lib.rs  parquet_reader.rs
crates/kyu-delta/: Cargo.toml
crates/kyu-delta/src/: batch.rs  delta.rs  lib.rs  node_key.rs  stats.rs  value.rs  vector_clock.rs
crates/kyu-delta/tests/: delta_scenarios.rs
crates/kyu-executor/: Cargo.toml
crates/kyu-executor/benches/: jit_bench.rs  storage_bench.rs
crates/kyu-executor/src/: batch_eval.rs  context.rs  data_chunk.rs  execute.rs  lib.rs  mapper.rs  physical_plan.rs  result.rs  value_vector.rs
crates/kyu-executor/src/jit/: cache.rs  compiler.rs  mod.rs  state.rs
crates/kyu-executor/src/operators/: aggregate.rs  bfs.rs  cross_product.rs  distinct.rs  empty.rs  filter.rs  hash_join.rs  limit.rs  mod.rs  projection.rs  recursive_join.rs  scan.rs  sort.rs  unwind.rs
crates/kyu-expression/: Cargo.toml
crates/kyu-expression/src/: bound_expr.rs  coercion.rs  evaluator.rs  function_registry.rs  lib.rs
crates/kyu-extension/: Cargo.toml
crates/kyu-extension/src/: lib.rs
crates/kyu-graph/: Cargo.toml  README.md
crates/kyu-graph/src/: lib.rs
crates/kyu-index/: Cargo.toml
crates/kyu-index/src/: hash_index.rs  lib.rs
crates/kyu-parser/: Cargo.toml
crates/kyu-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  span.rs  token.rs
crates/kyu-parser/src/parser/: clause.rs  ddl.rs  expression.rs  mod.rs  pattern.rs  statement.rs
crates/kyu-parser/tests/: tck_validation.rs
crates/kyu-planner/: Cargo.toml
crates/kyu-planner/src/: cost_model.rs  lib.rs  logical_plan.rs  optimizer.rs  plan_builder.rs  statistics.rs
crates/kyu-storage/: Cargo.toml
crates/kyu-storage/src/: buffer_manager.rs  chunked_node_group.rs  column_chunk.rs  constants.rs  csr.rs  disk_cache.rs  frame.rs  latch.rs  lib.rs  local_page_store.rs  node_group.rs  null_mask.rs  page_id.rs  page_store.rs  pool.rs  remote_page_store.rs  storage_types.rs
crates/kyu-transaction/: Cargo.toml
crates/kyu-transaction/src/: checkpointer.rs  cloud_wal.rs  lib.rs  local_wal.rs  manager.rs  transaction.rs  types.rs  undo_buffer.rs  version_info.rs  wal.rs  wal_record.rs  wal_replayer.rs
crates/kyu-types/: Cargo.toml
crates/kyu-types/src/: interval.rs  lib.rs  logical_type.rs  physical_type.rs  type_utils.rs  value.rs
crates/kyu-visualizer/: Cargo.toml  style.css
crates/kyu-visualizer/examples/: rdf_kg.rs  seed_db.rs
crates/kyu-visualizer/src/: app.rs  lib.rs  main.rs  state.rs  theme.rs  transitions.rs
crates/kyu-visualizer/src/canvas/: interaction.rs  mod.rs  renderer.rs
crates/kyu-visualizer/src/graph/: layout.rs  loader.rs  mod.rs
crates/kyu-visualizer/src/ui/: inspector.rs  mod.rs  query_bar.rs  sidebar.rs
docs/: 01-introduction.md  02-your-first-graph.md  03-build-a-knowledge-graph.md  04-explore-a-codebase.md  05-agentic-discovery.md  06-data-ingestion.md  07-extensions.md  08-arrow-flight.md  09-architecture.md  10-benchmarks.md
extensions/ext-algo/: Cargo.toml
extensions/ext-algo/src/: betweenness.rs  lib.rs  pagerank.rs  wcc.rs
extensions/ext-fts/: Cargo.toml
extensions/ext-fts/src/: index.rs  lib.rs
extensions/ext-json/: Cargo.toml
extensions/ext-json/src/: lib.rs
extensions/ext-rdf/: Cargo.toml
extensions/ext-rdf/src/: lib.rs  model.rs  parser.rs  schema.rs
extensions/ext-vector/: Cargo.toml
extensions/ext-vector/src/: distance.rs  hnsw.rs  lib.rs  staging.rs
scope/: spec.md
scripts/: publish.sh  update-homebrew.sh
