[package]
name = "kyu-api"
version = "0.1.0"
edition = "2024"

[dependencies]
kyu-binder     = { workspace = true }
kyu-catalog    = { workspace = true }
kyu-common     = { workspace = true }
kyu-executor   = { workspace = true }
kyu-expression = { workspace = true }
kyu-extension  = { workspace = true }
kyu-parser     = { workspace = true }
kyu-planner    = { workspace = true }
kyu-storage    = { workspace = true }
kyu-types      = { workspace = true }
hashbrown      = { workspace = true }
smol_str       = { workspace = true }
csv            = { workspace = true }

[dev-dependencies]
criterion  = { workspace = true }
ext-algo   = { path = "../../extensions/ext-algo" }

[[bench]]
name = "e2e_bench"
harness = false
