[package]
name = "kyu-api"
version = "0.1.0"
edition = "2024"

[dependencies]
kyu-binder      = { workspace = true }
kyu-catalog     = { workspace = true }
kyu-common      = { workspace = true }
kyu-copy        = { workspace = true }
kyu-executor    = { workspace = true }
kyu-expression  = { workspace = true }
kyu-extension   = { workspace = true }
kyu-parser      = { workspace = true }
kyu-planner     = { workspace = true }
kyu-storage     = { workspace = true }
kyu-transaction = { workspace = true }
kyu-types       = { workspace = true }
arrow          = { workspace = true }
arrow-flight   = { workspace = true }
bytes          = { workspace = true }
hashbrown      = { workspace = true }
smol_str       = { workspace = true }
tokio          = { workspace = true }
tonic          = { workspace = true }
futures        = { workspace = true }

[dev-dependencies]
arrow      = { workspace = true }
parquet    = { workspace = true }
criterion  = { workspace = true }
ext-algo   = { path = "../../extensions/ext-algo" }
ext-fts    = { path = "../../extensions/ext-fts" }
ext-vector = { path = "../../extensions/ext-vector" }

[[bench]]
name = "e2e_bench"
harness = false
