[package]
name = "kyu-binder"
version = "0.1.0"
edition = "2024"

[dependencies]
kyu-common     = { workspace = true }
kyu-types      = { workspace = true }
kyu-parser     = { workspace = true }
kyu-catalog    = { workspace = true }
kyu-expression = { workspace = true }
smol_str       = { workspace = true }
serde_json     = { workspace = true }
