[package]
name = "kyu-catalog"
version = "0.2.0"
edition = "2024"
description = "Schema catalog for KyuGraph: node/rel table entries and DDL management"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common = { workspace = true }
kyu-types  = { workspace = true }
kyu-parser = { workspace = true }
smol_str   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
