[package]
name = "kyu-graph-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
kyu-api     = { workspace = true }
kyu-catalog = { workspace = true }
kyu-common  = { workspace = true }
kyu-types   = { workspace = true }
serde_json  = { workspace = true }
ext-algo    = { workspace = true }
ext-fts     = { workspace = true }
ext-vector  = { workspace = true }
reedline    = { workspace = true }
tokio       = { workspace = true }
