[package]
name = "kyu-coord"
version = "0.2.0"
edition = "2024"
description = "Multi-tenant coordination layer for KyuGraph: task queues, worker pools, tenant registry"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"
readme = "README.md"

[dependencies]
kyu-common = { workspace = true }
dashmap    = { workspace = true }
