[package]
name = "kyu-copy"
version = "0.1.0"
edition = "2024"

[dependencies]
kyu-common = { workspace = true }
kyu-types  = { workspace = true }
csv        = { workspace = true }
arrow      = { workspace = true }
parquet    = { workspace = true }
smol_str   = { workspace = true }
rdkafka    = { workspace = true }
simd-json  = { workspace = true }
