[package]
name = "kyu-delta"
version = "0.1.0"
edition = "2024"
description = "Conflict-free idempotent delta batches for KyuGraph ingestion"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common = { workspace = true }
kyu-types  = { workspace = true }
smol_str   = { workspace = true }
hashbrown  = { workspace = true }
