[package]
name = "kyu-executor"
version = "0.3.0"
edition = "2024"
description = "Vectorized query executor with optional Cranelift JIT for KyuGraph"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common     = { workspace = true }
kyu-types      = { workspace = true }
kyu-parser     = { workspace = true }
kyu-catalog    = { workspace = true }
kyu-expression = { workspace = true }
kyu-binder     = { workspace = true }
kyu-planner    = { workspace = true }
kyu-storage    = { workspace = true }
smol_str       = { workspace = true }
hashbrown      = { workspace = true }
arc-swap       = { workspace = true }
dashmap        = { workspace = true }
rayon          = { workspace = true }
tracing        = { workspace = true }

# JIT (optional)
cranelift-jit      = { workspace = true, optional = true }
cranelift-module   = { workspace = true, optional = true }
cranelift-codegen  = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-native   = { workspace = true, optional = true }

[features]
default = []
jit = [
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-native",
]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "jit_bench"
harness = false
