[package]
name = "kyu-expression"
version = "0.1.0"
edition = "2024"

[dependencies]
kyu-common = { workspace = true }
kyu-types  = { workspace = true }
kyu-parser = { workspace = true }
smol_str   = { workspace = true }
smallvec   = { workspace = true }
hashbrown  = { workspace = true }
simd-json  = { workspace = true }
