[package]
name = "kyu-expression"
version = "0.3.0"
edition = "2024"
description = "Expression evaluation, type coercion, and function registry for KyuGraph"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common = { workspace = true }
kyu-types  = { workspace = true }
kyu-parser = { workspace = true }
smol_str   = { workspace = true }
smallvec   = { workspace = true }
hashbrown  = { workspace = true }
simd-json  = { workspace = true }
