[package]
name = "kyu-index"
version = "0.2.0"
edition = "2024"
description = "Hash index and index management for KyuGraph storage"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common  = { workspace = true }
kyu-types   = { workspace = true }
thiserror   = { workspace = true }
