[package]
name = "kyu-planner"
version = "0.2.0"
edition = "2024"
description = "Query planner and logical plan optimizer for KyuGraph"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common     = { workspace = true }
kyu-types      = { workspace = true }
kyu-parser     = { workspace = true }
kyu-catalog    = { workspace = true }
kyu-expression = { workspace = true }
kyu-binder     = { workspace = true }
smol_str       = { workspace = true }
hashbrown      = { workspace = true }
