[package]
name = "kyu-storage"
version = "0.1.0"
edition = "2024"
description = "Columnar storage engine for KyuGraph with buffer management and S3 support"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common  = { workspace = true }
kyu-types   = { workspace = true }
dashmap     = { workspace = true }
smol_str    = { workspace = true }
thiserror   = { workspace = true }
aws-sdk-s3  = { workspace = true }
aws-config  = { workspace = true }
tokio       = { workspace = true }
