[package]
name = "kyu-transaction"
version = "0.1.0"
edition = "2024"
description = "Transaction engine with WAL and MVCC for KyuGraph"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common  = { workspace = true }
kyu-storage = { workspace = true }
thiserror   = { workspace = true }
