[package]
name = "kyu-types"
version = "0.2.0"
edition = "2024"
description = "Type system for KyuGraph: physical types, logical types, and typed values"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-common  = { workspace = true }
smol_str    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
