[package]
name = "ext-algo"
version = "0.3.0"
edition = "2024"
description = "Graph algorithm extension for KyuGraph: PageRank, shortest path, community detection"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-extension = { workspace = true }
kyu-types = { workspace = true }
