[package]
name = "ext-fts"
version = "0.1.0"
edition = "2024"
description = "Full-text search extension for KyuGraph powered by Tantivy"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-extension = { workspace = true }
kyu-types     = { workspace = true }
smol_str      = { workspace = true }
tantivy       = { workspace = true }
