[package]
name = "ext-vector"
version = "0.2.0"
edition = "2024"
description = "Vector similarity search extension for KyuGraph"
license = "MIT"
repository = "https://github.com/offbit-ai/kyugraph"

[dependencies]
kyu-extension = { workspace = true }
kyu-types     = { workspace = true }
smol_str      = { workspace = true }
